--- a/src/styles/settings/_colors.scss
+++ b/src/styles/settings/_colors.scss
@@ -6,4 +6,6 @@ $theme-highlight-gray: #dbdbd1;
 $theme-highlight-yellow: #fdf9c5;
 $theme-main-color: #ff7100;
 $theme-selected: #eeeeee;
+$theme-hovered: #eeeeee;
 $theme-text: black;
+$theme-shadow: #707070
