major rewriting and fixes

--- a/src/styles/components/mainMenu/_addItemButton.scss
+++ b/src/styles/components/mainMenu/_addItemButton.scss
@@ -1,22 +1,23 @@
 
 .add-item-button__wrapper {
-    position: absolute;
+    display: inline-block;
+    position: static;
     left: 0;
-    top: 0;
+    bottom: $std-size;
     .add-item-button {
-        background: $green-button;
+        background: green;
         border-radius: 20px;
         color: white;
         direction: rtl;
         font-weight: 500;
         font-size: $font-size-s;
         height: 2.5 * $std-size;
-        line-height: 2.5 * $std-size;
-        margin: 15px;
+        line-height: 2.6 * $std-size;
+        margin: 15px 15px 15px 0;
         text-align: center;
         width: 12 * $std-size;
         &:hover {
-            background: darken($green-button, 10%);
+            background: darken(green, 10%);
         }    
     }
 }
