--- a/src/styles/settings/_sizes.scss
+++ b/src/styles/settings/_sizes.scss
@@ -4,3 +4,5 @@ $font-size-m: 1.2 * $std-size;
 $font-size-l: 1.4 * $std-size;
 $font-size-xl: 1.6 * $std-size;
 $font-size-xxl: 2.0 * $std-size;
+$main-menu-logo-width: 7 * $std-size;
+$main-menu-height: 5 * $std-size;
