--- a/src/styles/components/mainMenu/_mainMenu.scss
+++ b/src/styles/components/mainMenu/_mainMenu.scss
@@ -1,32 +1,88 @@
-.main-menu {
-    background: white;
-    border-bottom: 1px solid $theme-selected;
-    border-top: 6px solid $theme-main-color;
-    display: flex;
-    flex-direction: row-reverse;
-    height: 4 * $std-size;
+.html {
+    height: 100%;
 }
-.main-menu__items-container {
+.main-menu {
+    background: $theme-background;
+    border-bottom: 1px solid $theme-selected;
+    border-top: 5px solid $theme-main-color;
+    box-shadow: 0 5px 6px 0 rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: row-reverse;
-    justify-content: space-between; 
-    .main-menu__item-wrapper {
-        background: white;
-        display: flex;
-        direction: rtl;
-        flex-direction: row-reverse;
-        height: 100%;
-        
-        &:hover {
-            background: $theme-hovered;
-        }
-        .main-menu__item {
-            color: $theme-text;
-            font-size: $font-size-m;
-            padding: $std-size;
-            text-align: center;
-            text-decoration: none;
-            vertical-align: middle;
-        }
+    height: $main-menu-height;
+}
+.main-menu__nav-links-container {
+    @extend .flex-center;
+    flex-direction: row-reverse;
+}
+.main-menu__nav-item {
+    @extend .flex-center;
+    background: $theme-background;
+    font-size: $font-size-s;
+    height: 100%;
+    padding: $std-size;
+    &:hover .main-menu__nav-item-link {
+        background: $theme-hovered;
     }
+    &:hover {
+        background: $theme-hovered;
+    }
+}
+
+.main-menu__logo-container {
+    @extend .main-menu__nav-item;
+    a{
+        @extend .flex-center;
+    }
+    img {
+        width: $main-menu-logo-width;
+    }
+    padding: $std-size 0 $std-size $std-size;
+}
+
+.add-item-button__container {
+    align-items: center;
+    display: flex;    
+    color: $theme-text;
+    text-decoration: none;
+}
+.add-item-button {
+    background: $add-item-button-background;
+    border-radius: 20px;
+    color: white;
+    direction: rtl;
+    font-size: $font-size-s;
+    font-weight: 500;
+    height: 40px;
+    line-height: 20px;
+    padding: 10px 18px;
+    vertical-align: middle;
+    width: 193px;
+    &:hover {
+        background: darken($add-item-button-background, 10%);    
+    }
+}
+.main-menu__left-segment {
+    display: flex;
+    flex-direction: row;
+}
+.main-menu__right-segment {
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.main-menu__nav-link__dropdown {
+    border: 4px solid red;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    max-height: 90rem;
+    position: relative;
+    top: 190px;
+}
+.main-menu__dropdown-link-container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    max-height: 90rem;
+    
 }
