--- a/src/styles/settings/_colors.scss
+++ b/src/styles/settings/_colors.scss
@@ -1,11 +1,11 @@
 $accesebility-blue: #002f75;
-$green-button: #0fca80;
-$theme-background: #f9f9f9;
+$add-item-button-background: #0fca80;
+$theme-background: #fff;
 $theme-footer-background: #363636;
 $theme-highlight-gray: #dbdbd1;
 $theme-highlight-yellow: #fdf9c5;
 $theme-main-color: #ff7100;
 $theme-selected: #eeeeee;
 $theme-hovered: #eeeeee;
-$theme-text: black;
+$theme-text: #363636;
 $theme-shadow: #707070
