--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,5 @@
 @import './settings/colors';
 @import './settings/sizes';
+@import './base/base';
 @import './components/mainMenu/addItemButton';
 @import './components/mainMenu/mainMenu';
-@import './components/mainMenu/dropdownLink'
