--- a/src/styles/components/mainMenu/_mainMenu.scss
+++ b/src/styles/components/mainMenu/_mainMenu.scss
@@ -5,84 +5,90 @@
     background: $theme-background;
     border-bottom: 1px solid $theme-selected;
     border-top: 5px solid $theme-main-color;
-    box-shadow: 0 5px 6px 0 rgba(0, 0, 0, 0.1);
+    box-shadow: $theme-box-shadow;
     display: flex;
     flex-direction: row-reverse;
     height: $main-menu-height;
-}
-.main-menu__nav-links-container {
-    @extend .flex-center;
-    flex-direction: row-reverse;
-}
-.main-menu__nav-item {
-    @extend .flex-center;
-    background: $theme-background;
-    font-size: $font-size-s;
-    height: 100%;
-    padding: $std-size;
-    &:hover .main-menu__nav-item-link {
-        background: $theme-hovered;
+   
+    .main-menu__left-segment {
+        display: flex;
+        flex-direction: row;
+        .add-item-button__container {
+            align-items: center;
+            display: flex;    
+            color: $theme-text;
+            text-decoration: none;
+        }
+        .add-item-button {
+            background: $add-item-button-background;
+            border-radius: 20px;
+            color: white;
+            direction: rtl;
+            font-size: $font-size-s;
+            font-weight: 500;
+            height: 40px;
+            line-height: 20px;
+            padding: 10px 18px;
+            vertical-align: middle;
+            width: 193px;
+            &:hover {
+                background: darken($add-item-button-background, 10%);    
+            }
+        }
+        
     }
-    &:hover {
-        background: $theme-hovered;
+    .main-menu__right-segment {
+        display: flex;
+        flex-direction: row-reverse;
+        .main-menu__logo-container {
+            @extend .main-menu__nav-item;
+            a{
+                @extend .flex-center;
+            }
+            img {
+                width: $main-menu-logo-width;
+            }
+            padding: $std-size 0 $std-size $std-size;
+        }
     }
-}
-
-.main-menu__logo-container {
-    @extend .main-menu__nav-item;
-    a{
+    .main-menu__nav-items-container {
         @extend .flex-center;
+        flex-direction: row-reverse;
     }
-    img {
-        width: $main-menu-logo-width;
+    .main-menu__nav-item {
+        @extend .flex-center;
+        @extend .linked-text;
+        background: $theme-background;
+        font-size: $font-size-s;
+        height: 100%;
+        padding: $std-size;
+        &:hover .main-menu__nav-item-link {
+            background: $theme-hovered;
+        }
+        &:hover {
+            background: $theme-hovered;
+        }
+        .main-menu__dropdown-container {
+            box-shadow: $theme-box-shadow;
+            direction: rtl;
+            height: auto;  
+            position: absolute;
+            top: $main-menu-height;
+            width: auto; 
+            .main-menu__dropdown-item {    
+                @extend .linked-text;
+                display: flex;
+                flex-direction: column;
+                flex-wrap: wrap;
+                padding: 0.3*$std-size $std-size;
+                position: relative;
+                &:hover {
+                    color: $theme-main-color;
+                }
+            }
+        }
     }
-    padding: $std-size 0 $std-size $std-size;
 }
 
-.add-item-button__container {
-    align-items: center;
-    display: flex;    
-    color: $theme-text;
-    text-decoration: none;
-}
-.add-item-button {
-    background: $add-item-button-background;
-    border-radius: 20px;
-    color: white;
-    direction: rtl;
-    font-size: $font-size-s;
-    font-weight: 500;
-    height: 40px;
-    line-height: 20px;
-    padding: 10px 18px;
-    vertical-align: middle;
-    width: 193px;
-    &:hover {
-        background: darken($add-item-button-background, 10%);    
-    }
-}
-.main-menu__left-segment {
-    display: flex;
-    flex-direction: row;
-}
-.main-menu__right-segment {
-    display: flex;
-    flex-direction: row-reverse;
-}
 
-.main-menu__nav-link__dropdown {
-    border: 4px solid red;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    max-height: 90rem;
-    position: relative;
-    top: 190px;
-}
-.main-menu__dropdown-link-container {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    max-height: 90rem;
-    
-}
+
