minor fixes to dropdowns

--- a/src/styles/settings/_sizes.scss
+++ b/src/styles/settings/_sizes.scss
@@ -6,3 +6,5 @@ $font-size-xl: 1.6 * $std-size;
 $font-size-xxl: 2.0 * $std-size;
 $main-menu-height: 5 * $std-size;
 $main-menu-logo-width: 7 * $std-size;
+$main-menu-dropdown-item-padding: $std-size * 0.4 $std-size * 1.5 $std-size * 0.4 $std-size * 3;
+$main-menu-dropdown-menu-padding: $std-size * 1.5 0 $std-size*1.5 $std-size*2;
