--- a/src/styles/components/mainMenu/_mainMenu.scss
+++ b/src/styles/components/mainMenu/_mainMenu.scss
@@ -77,6 +77,7 @@
             display: grid;
             flex-direction: column;
             grid-auto-flow: column;
+            padding: $main-menu-dropdown-menu-padding;
             position: absolute;
             top: $main-menu-height;
             width: auto;           
@@ -85,7 +86,7 @@
                 display: flex;
                 flex-direction: column;
                 flex-wrap: wrap;
-                padding: 0.3*$std-size $std-size;
+                padding: $main-menu-dropdown-item-padding;
                 position: relative;
                 &:hover {
                     color: $theme-main-color;
