--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,3 +3,4 @@
 @import './base/base';
 @import './components/mainMenu/addItemButton';
 @import './components/mainMenu/mainMenu';
+@import './components/navbars/realestateNavbar'
