--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,4 +3,6 @@
 @import './base/base';
 @import './components/mainMenu/addItemButton';
 @import './components/mainMenu/mainMenu';
-@import './components/navbars/realestateNavbar'
+@import './components/navbars/realestateNavbar';
+@import './components/body/realestateBody';
+@import './components/body/topInfo';
