top info bar and ad spots (unfinished)

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800&display=swap');
 
 * {
-    background: $theme-background;
+    background: $theme-background-body;
     box-sizing: border-box;
     color: $theme-text;
 }
