--- a/src/styles/components/body/_topInfo.scss
+++ b/src/styles/components/body/_topInfo.scss
@@ -17,7 +17,7 @@
         color: white;
         font-size: $font-size-s;
         height: $std-size * 1.8;
-        margin: 0 10px;
+        margin-right: 10px;
         padding: 22px 55px;        
         width: $std-size * 5;
         img {
@@ -27,4 +27,4 @@
         }
         
     }
-}
+} 
