--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,3 +6,6 @@
 @import './components/navbars/realestateNavbar';
 @import './components/body/realestateBody';
 @import './components/body/topInfo';
+@import './components/body/topAd';
+@import './components/body/sideAdRight';
+
