--- a/src/styles/components/body/_realestateBody.scss
+++ b/src/styles/components/body/_realestateBody.scss
@@ -2,7 +2,10 @@
     background: $theme-background-body;
     display: flex;
     justify-content: center;
+    margin-top: 8px;
+    min-height: 800px;
     width: 100%;
+    z-index: -1;
     .realestate-body__content-area {
         width: 70%;
     }
