--- a/src/styles/components/navbars/_realestateNavbar.scss
+++ b/src/styles/components/navbars/_realestateNavbar.scss
@@ -1,17 +1,18 @@
 .realestate-navbar {
-    background: $theme-background;
+    background: $theme-background-header;
     box-shadow: $theme-box-shadow;
     display: flex;
     flex-direction: row-reverse;
     height: $navbar-height;
     justify-content: space-between;
     .realestate-navbar__right {
+        background: $theme-background-header;
         display: flex;
         flex-direction: row-reverse;        
         .navbar-item__right {
             @extend .flex-center;
             @extend .linked-text;
-            background: $theme-background;
+            background: $theme-background-header;
             font-size: $font-size-s;
             height: 100%;
             margin: 0 10px;
@@ -26,6 +27,7 @@
             font-weight: 500;
         }
         .realestate-navbar__right-spacer {
+            background: $theme-background-header;
             width: $main-menu-logo-width;
         }
     }
@@ -38,14 +40,15 @@
             margin: 0;
         }
        img {
+            background: $theme-background-header;
             height: $std-size * 1.2;
-            mix-blend-mode: multiply;
-            padding-left: $std-size * 0.2;
             max-width: $std-size * 2.5;
+            mix-blend-mode: multiply;
+            padding-left: $std-size * 0.2;            
        }
        .realestate-navbar__left-spacer {
-            width: $std-size;
-           
+            background: $theme-background-header;
+            width: $std-size;           
         }
     }
     
