--- a/src/styles/settings/_colors.scss
+++ b/src/styles/settings/_colors.scss
@@ -1,6 +1,6 @@
 $accessibility-blue: #002f75;
 $add-item-button-background: #0fca80;
-$theme-background: #fff;
+$theme-background-header: #fff;
 $theme-background-body: #f9f9f9;
 $theme-box-shadow: 0 5px 6px 0 rgba(0, 0, 0, 0.1);
 $theme-footer-background: #363636;
