--- a/src/styles/settings/_sizes.scss
+++ b/src/styles/settings/_sizes.scss
@@ -10,3 +10,4 @@ $main-menu-logo-width: $std-size * 7.0;
 $main-menu-dropdown-item-padding: $std-size * 0.4 $std-size * 1.5 $std-size * 0.4 $std-size * 3;
 $main-menu-dropdown-menu-padding: $std-size * 1.5 0 $std-size*1.5 $std-size*2;
 $navbar-height: $std-size * 3.5;
+$top-ad-height: 180px;
