--- a/src/styles/settings/_sizes.scss
+++ b/src/styles/settings/_sizes.scss
@@ -10,4 +10,7 @@ $main-menu-logo-width: $std-size * 7.0;
 $main-menu-dropdown-item-padding: $std-size * 0.4 $std-size * 1.5 $std-size * 0.4 $std-size * 3;
 $main-menu-dropdown-menu-padding: $std-size * 1.5 0 $std-size*1.5 $std-size*2;
 $navbar-height: $std-size * 3.5;
-$top-ad-height: 180px;
+$side-ad-height: $std-size * 37.5;
+$side-ad-width: $std-size * 7.5;
+$top-ad-height: $std-size * 11.25;
+$top-ad-width: $std-size * 58.125;
