--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -7,5 +7,5 @@
 @import './components/body/realestateBody';
 @import './components/body/topInfo';
 @import './components/body/topAd';
-@import './components/body/sideAdRight';
-
+@import './components/body/sideAd';
+@import './components/body/searchBar/searchBar'
