--- a/src/styles/settings/_sizes.scss
+++ b/src/styles/settings/_sizes.scss
@@ -1,5 +1,6 @@
 $std-size: 1.0rem;
-$font-size-xs: $std-size * 0.9;
+$font-size-xxs: $std-size * 0.7;
+$font-size-xs: $std-size * 0.85;
 $font-size-s: $std-size * 1.0;
 $font-size-m: $std-size * 1.2;
 $font-size-l: $std-size * 1.4;
