--- a/src/styles/components/body/_topInfo.scss
+++ b/src/styles/components/body/_topInfo.scss
@@ -7,8 +7,12 @@
     padding: $std-size * 0.6;
     .top-info__right {
         background-color: $theme-background-body;
-        color: $theme-text;
+        color: lighten($theme-text, 40%);
         font-size: $font-size-xs;
+        .top-info__nav__delimiter {
+            color: lighten($theme-text, 40%);
+            font-size: $font-size-xxs;
+        }
     }
     .top-info__accessibility {
         @extend .flex-center;
@@ -25,6 +29,5 @@
             padding-left: $std-size * 0.5;
             height: 30px;
         }
-        
     }
 } 
