main-menu nav-item, picked one is colored

--- a/src/styles/components/mainMenu/_mainMenu.scss
+++ b/src/styles/components/mainMenu/_mainMenu.scss
@@ -64,6 +64,7 @@
         @extend .flex-center;        
         flex-direction: row-reverse;
     }
+    
     .main-menu__nav-item {
         @extend .flex-center;
         @extend .linked-text;
@@ -82,6 +83,9 @@
         }
         .app-link a{
             background: $theme-background-header;
+        }
+        .app-link__picked a{
+            background: darken($theme-hovered, 8%);
         }
         
         .main-menu__dropdown-container {
@@ -135,6 +139,11 @@
             grid-template-rows: repeat(3, 1fr);
         }
        
+    }
+    .main-menu__nav-item__picked {
+        @extend .main-menu__nav-item;
+        background-color: darken($theme-hovered, 8%);
+        pointer-events: none;
     }
 }
 
