--- a/src/styles/settings/_colors.scss
+++ b/src/styles/settings/_colors.scss
@@ -8,6 +8,6 @@ $theme-highlight-gray: #dbdbd1;
 $theme-highlight-yellow: #fdf9c5;
 $theme-main-color: #ff7100;
 $theme-selected: #eeeeee;
-$theme-hovered: #eeeeee;
+$theme-hovered: #f9f9f9;
 $theme-text: #363636;
 $theme-shadow: #707070
