search location w/autocomplete added

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -8,4 +8,5 @@
 @import './components/body/topInfo';
 @import './components/body/topAd';
 @import './components/body/sideAd';
-@import './components/body/searchBar/searchBar'
+@import './components/body/searchBar/searchBar';
+@import './components/body/searchBar/searchFields/locationSearch'
