--- a/src/styles/components/body/searchBar/_searchBar.scss
+++ b/src/styles/components/body/searchBar/_searchBar.scss
@@ -8,6 +8,9 @@
         font-weight: 500;
         direction: rtl;
         display: flex;
+        .search-bar__header {
+            background: $theme-background-header;
+        }
         .realestate-search-bar__header__alt-cat {
             @extend .linked-text;
             background: $theme-background-header;
@@ -17,7 +20,6 @@
     }
     .realestate-search-bar__search-columns {
         background: $theme-background-header;
-        border: 2px solid green;
         display: flex;
         flex-direction: row-reverse;
         padding-top: $std-size * 1.825;
