--- a/src/styles/settings/_colors.scss
+++ b/src/styles/settings/_colors.scss
@@ -10,4 +10,5 @@ $theme-main-color: #ff7100;
 $theme-selected: #eeeeee;
 $theme-hovered: #f9f9f9;
 $theme-text: #363636;
-$theme-shadow: #707070
+$theme-shadow: #707070;
+$theme-box-border: #e7e7e7;
