half baked property type search added, TBC

--- a/src/styles/settings/_sizes.scss
+++ b/src/styles/settings/_sizes.scss
@@ -13,5 +13,6 @@ $main-menu-dropdown-menu-padding: $std-size * 1.5 0 $std-size*1.5 $std-size*2;
 $navbar-height: $std-size * 3.5;
 $side-ad-height: $std-size * 37.5;
 $side-ad-width: $std-size * 7.5;
+$searchbox-Height: $std-size * 3;
 $top-ad-height: $std-size * 11.25;
 $top-ad-width: $std-size * 58.125;
