--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -9,4 +9,5 @@
 @import './components/body/topAd';
 @import './components/body/sideAd';
 @import './components/body/searchBar/searchBar';
-@import './components/body/searchBar/searchFields/locationSearch'
+@import './components/body/searchBar/searchFields/locationSearch';
+@import './components/body/searchBar/searchFields/propertyType';
