--- a/src/styles/components/body/searchBar/searchFields/_locationSearch.scss
+++ b/src/styles/components/body/searchBar/searchFields/_locationSearch.scss
@@ -1,20 +1,26 @@
 .location-search {
     background: $theme-background-header;
+    display: flex;
+    flex-direction: column;
     padding: $std-size * 0.6;
     .location-search__header {
+        height: $std-size ;
         background: $theme-background-header;
         color: $theme-text;
         font-size: $font-size-xs;
+        font-weight: 500;
     }
     .location-search__input {
         .location-input__container {
             background: $theme-background-header;
             padding-top: $std-size * 0.5;
             .location-input__field {
+                height: $searchbox-Height;
                 background: $theme-background-header;
-                border: 2px solid $theme-box-border;
+                border: 1px solid $theme-box-border;
                 padding: $std-size * 0.6  $std-size * 0.6 $std-size * 0.6 0;
                 width: 100%;
+                height: 100%;
             }
         }
         #autocomplete-dropdown-container {
