--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -4,6 +4,7 @@
     background: $theme-background-header;
     box-sizing: border-box;
     color: $theme-text;
+    white-space: nowrap;
 }
 
 body {
