--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -14,3 +14,4 @@
 @import './components/body/realestate/topBoxesRow/topBoxesRow';
 @import './components/body/realestate/topBoxesRow/mediaBox';
 @import './components//body//realestate/searchBar/searchFields/rooms';
+@import './components/body/realestate/searchBar/searchFields/price';
